# ai-animate

./: .gitignore  README.md  start.sh  stop.sh
backend/: README.md  config.yaml.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: pipeline.py
backend/app/api/: routes.py
backend/app/core/: config.py  context_manager.py
backend/app/models/: schemas.py
backend/app/services/: image_client.py  llm_client.py  lora_client.py  tts_client.py  video_client.py
frontend/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/confirm-character/: route.ts
frontend/app/api/continue-generation/: route.ts
frontend/app/api/parse-text/: route.ts
frontend/app/api/rollback/: route.ts
frontend/app/api/task-status/[project_id]/: route.ts
frontend/app/characters/: page.tsx
frontend/app/novel-input/: page.tsx
frontend/app/preview/: page.tsx
frontend/app/scenes/: page.tsx
frontend/components/: mode-indicator.tsx  step-indicator.tsx  task-progress.tsx
frontend/components/layout/: AppHeader.tsx
frontend/lib/: api-factory.ts  api-mock.ts  api.ts  pipeline-manager.ts  types.ts
frontend/lib/hooks/: use-projects.ts
frontend/lib/mock-data/: characters.ts  progress-simulator.ts  projects.ts
frontend/lib/services/: image-client.ts  llm-client.ts  tts-client.ts  video-client.ts
frontend/lib/types/: index.ts
frontend/lib/utils/: context-manager.ts  pipeline.ts
